tests/snapshots/snapshots__pipeline@decl_brace_effect.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/decl_brace_effect.pr
---
== tokens ==
VOpen Effect UIdent("State") LBrace Ident("get") LParen RParen Colon KwInt RBrace VClose

== parse ==
[E7100] Parse Error: effect bodies use layout: remove the braces and put each operation on its own indented line
   ╭─[ <source>:1:14 ]
   │
 1 │ effect State {
   │              ┬  
   │              ╰── here
───╯
